fix: invisible text on initial render(webfont display fix)

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
     url("/assets/Mona-Sans.woff2") format("woff2-variations");
   font-weight: 200 900;
   font-stretch: 75% 125%;
+  font-display: swap;
 }
 
 html {
